WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52611
[Qt] Incorrect shadow alpha with semi-transparent solid fillStyle
https://bugs.webkit.org/show_bug.cgi?id=52611
Summary
[Qt] Incorrect shadow alpha with semi-transparent solid fillStyle
Helder Correia
Reported
2011-01-17 23:22:50 PST
This is related to bug 5255. The shadow color alpha must be multiplied by the context brush alpha.
Attachments
Patch
(10.30 KB, patch)
2011-01-17 23:26 PST
,
Helder Correia
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Helder Correia
Comment 1
2011-01-17 23:23:45 PST
(In reply to
comment #0
)
> This is related to bug 5255.
I meant 52559.
Helder Correia
Comment 2
2011-01-17 23:26:57 PST
Created
attachment 79244
[details]
Patch
WebKit Commit Bot
Comment 3
2011-01-18 10:10:55 PST
Comment on
attachment 79244
[details]
Patch Clearing flags on attachment: 79244 Committed
r76033
: <
http://trac.webkit.org/changeset/76033
>
WebKit Commit Bot
Comment 4
2011-01-18 10:11:00 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug