2011-01-18  Helder Correia  <helder@sencha.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Incorrect shadow alpha with semi-transparent solid fillStyle
        https://bugs.webkit.org/show_bug.cgi?id=52611

        This is related to bug 52559. The shadow color alpha must be multiplied
        by the context brush alpha.

        New test to ensure correct behavior of canvas with fillPath using a
        semi-transparent fillStyle color and a shadow.

        * fast/canvas/canvas-fillPath-alpha-shadow-expected.txt: Added.
        * fast/canvas/canvas-fillPath-alpha-shadow.html: Added.
        * fast/canvas/script-tests/canvas-fillPath-alpha-shadow.js: Added.
2011-01-18  Helder Correia  <helder@sencha.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Incorrect shadow alpha with semi-transparent solid fillStyle
        https://bugs.webkit.org/show_bug.cgi?id=52611

        This is related to bug 52559. The shadow color alpha must be multiplied
        by the context brush alpha.

        Test: fast/canvas/canvas-fillPath-alpha-shadow.html

        * platform/graphics/qt/GraphicsContextQt.cpp:
        (WebCore::GraphicsContext::fillPath):

git-svn-id: svn://svn.chromium.org/blink/trunk@76033 bbb929c8-8fbe-4397-9dbb-9b2b20218538